--- a/HTML/contactus.html
+++ b/HTML/contactus.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us - Mind Connect</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="../CSS/index.css">
   <link rel="stylesheet" href="../CSS/contactus.css">
 </head>
 <body>
@@ -12,7 +18,7 @@
         <img src="../Images/logo.webp" alt="MindConnect">
     </div>
     <ul>
-        <li class="item"><a href="../HTML/index.html">Home</a></li>
+        <li class="item"><a href="/index.html">Home</a></li>
         <li class="dropdown">
             <a href="#" class="dropbtn">Services</a>
             <div class="dropdown-content">
