--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -12,7 +12,7 @@
             <img src="../Images/logo.webp" alt="MindConnect">
         </div>
         <ul>
-            <li class="item"><a href="../HTML/index.html">Home</a></li>
+            <li class="item"><a href="/index.html">Home</a></li>
             <li class="dropdown">
                 <a href="#" class="dropbtn">Services</a>
                 <div class="dropdown-content">
