--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="../Images/logo.webp" alt="MindConnect">
         </div>
         <ul>
-            <li class="item"><a href="../HTML/index.html">Home</a></li>
+            <li class="item"><a href="/index.html">Home</a></li>
             <li class="dropdown">
                 <a href="#" class="dropbtn">Services</a>
                 <div class="dropdown-content">
@@ -28,7 +28,7 @@
                 </div>
             </li>
             <li class="item"><a href="../HTML/aboutus.html">About Us</a></li>
-            <li class="item"><a href="contactus.html">Contact Us</a></li>
+            <li class="item"><a href="../HTML/contactus.html">Contact Us</a></li>
             <li class="item"><a href="../HTML/blog.html">Blog Post</a></li>
 
 
